--- a/package.json
+++ b/package.json
@@ -2,14 +2,16 @@
   "name": "hyperporter",
   "version": "1.0.0",
   "description": "HyperDeck recording management web application",
+  "main": "electron/main.js",
   "scripts": {
-  "start": "concurrently \"cd server && node index.js\" \"cd client && npm start\"",
-  "server": "node server/index.js",
-  "dev": "concurrently \"npm run server\" \"npm run start\"",
-  "build": "react-scripts build",
-  "test": "react-scripts test",
-  "eject": "react-scripts eject"
-},
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject",
+    "dev": "nodemon server/index.js",
+    "electron-dev": "cross-env NODE_ENV=development concurrently \"yarn --cwd client start\" \"wait-on http://localhost:3000 && electron .\"",
+    "electron": "electron ."
+  },
   "author": "Ben Turner",
   "license": "ISC",
   "dependencies": {
@@ -21,11 +23,23 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "^5.0.1",
+    "tailwindcss": "^3.4.16",
+    "web-vitals": "^4.2.4",
     "ws": "^8.18.0"
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "concurrently": "^8.2.2",
-    "nodemon": "^3.0.3"
+    "cross-env": "^7.0.3",
+    "electron": "^25.3.1",
+    "nodemon": "^3.0.3",
+    "wait-on": "^7.0.1"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
   },
   "browserslist": {
     "production": [
