--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "fluent-ffmpeg": "^2.1.3",
     "fs-extra": "^11.2.0",
     "node-media-server": "^4.0.7",
     "node-rtsp-stream": "^0.0.9",
