--- a/package.json
+++ b/package.json
@@ -3,6 +3,42 @@
   "version": "1.0.0",
   "description": "HyperDeck recording management web application",
   "main": "electron/main.js",
+  "author": "Ben Turner",
+  "license": "ISC",
+  "build": {
+    "appId": "com.hyperporter.app",
+    "productName": "Hyperporter",
+    "mac": {
+      "target": [
+        "dmg",
+        "zip"
+      ],
+      "icon": "assets/icon.icns"
+    },
+    "win": {
+      "target": [
+        "portable",
+        "zip"
+      ],
+      "icon": "assets/icon.ico"
+    },
+    "linux": {
+      "target": [
+        "AppImage"
+      ],
+      "icon": "assets/icon.png"
+    },
+    "files": [
+      "build/**/*",
+      "node_modules/**/*",
+      "electron/**/*",
+      "server/**/*",
+      "package.json"
+    ],
+    "directories": {
+      "buildResources": "assets"
+    }
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
@@ -10,33 +46,36 @@
     "eject": "react-scripts eject",
     "dev": "nodemon server/index.js",
     "electron-dev": "cross-env NODE_ENV=development concurrently \"yarn --cwd client start\" \"wait-on http://localhost:3000 && electron .\"",
-    "electron": "electron ."
+    "electron": "electron .",
+    "electron:build": "npm run build && electron-builder -mwl",
+    "electron:build:mac": "npm run build && electron-builder --mac",
+    "electron:build:win": "npm run build && electron-builder --win",
+    "electron:build:linux": "npm run build && electron-builder --linux"
   },
-  "author": "Ben Turner",
-  "license": "ISC",
   "dependencies": {
     "basic-ftp": "^5.0.5",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "fluent-ffmpeg": "^2.1.2",
     "fs-extra": "^11.2.0",
     "lucide-react": "^0.468.0",
+    "node-rtsp-stream": "^0.0.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "^5.0.1",
     "tailwindcss": "^3.4.16",
     "web-vitals": "^4.2.4",
-    "ws": "^8.18.0",
-    "node-rtsp-stream": "^0.0.9",
-    "fluent-ffmpeg": "^2.1.2"
+    "ws": "^8.18.0"
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "concurrently": "^8.2.2",
     "cross-env": "^7.0.3",
     "electron": "^25.3.1",
+    "electron-builder": "^24.13.3",
+    "electron-rebuild": "^3.2.9",
     "nodemon": "^3.0.3",
-    "wait-on": "^7.0.1",
-    "electron-rebuild": "^3.2.9"
+    "wait-on": "^7.0.1"
   },
   "eslintConfig": {
     "extends": [
