--- a/package.json
+++ b/package.json
@@ -62,7 +62,8 @@
     "electron:build": "npm run build && electron-builder -mwl",
     "electron:build:mac": "npm run build && electron-builder --mac",
     "electron:build:win": "npm run build && electron-builder --win",
-    "electron:build:linux": "npm run build && electron-builder --linux"
+    "electron:build:linux": "npm run build && electron-builder --linux",
+	"format": "prettier -w ."
   },
   "dependencies": {
     "basic-ftp": "^5.0.5",
