cleanup and prune, clarify

--- a/package.json
+++ b/package.json
@@ -30,7 +30,6 @@
     },
     "files": [
       "client/build/**/*",
-      "node_modules/**/*",
       "electron/**/*",
       "server/**/*",
       "package.json"
@@ -41,23 +40,22 @@
     "extraResources": [
       {
         "from": "assets",
-        "to": ".",
-        "filter": [
-          "icon.*"
-        ]
+        "to": "."
       }
     ],
     "extraMetadata": {
       "main": "electron/main.js"
     }
   },
+  "preinstall": "if [ ! -d 'node_modules' ]; then npm install; fi",
   "scripts": {
-    "start": "react-scripts start",
-    "build": "cd client && npm run build && cd ..",
+    "start": "concurrently \"cd client && react-scripts start\" \"cd server && node index.js\"",
+    "build": "cd client && npm run build && cd .. && npm prune --production",
+	"install-deps": "concurrently \"cd client && npm install\" \"cd server && npm install\"",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "dev": "nodemon server/index.js",
-    "electron-dev": "cross-env NODE_ENV=development concurrently \"yarn --cwd client start\" \"wait-on http://localhost:3000 && electron .\"",
+    "electron-dev": "cross-env NODE_ENV=development concurrently \"yarn --cwd client start\" \"wait-on http://localhost:3000 --timeout 60000 && electron .\"",
     "electron": "electron .",
     "electron:build": "npm run build && electron-builder -mwl",
     "electron:build:mac": "npm run build && electron-builder --mac",
@@ -82,6 +80,7 @@
     "electron-rebuild": "^3.2.9",
     "nodemon": "^3.0.3",
     "prettier": "^3.4.2",
+	"react-scripts": "^5.0.1",
     "wait-on": "^7.0.1"
   }
 }
